# MaiBot-Napcat-Adapter

./: .gitignore  command_args.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  logger.py  mmc_com_layer.py
src/config/: __init__.py  config.py  config_manager.py  official_configs.py
src/recv_handler/: __init__.py  message_handler.py  message_sending.py  meta_event_handler.py  notice_handler.py  qq_emoji_list.py
src/send_handler/: main_send_handler.py  send_command_handler.py  send_message_handler.py
template/: template_config.toml
